# ChangeLog for sci-chemistry/shelx
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/shelx/ChangeLog,v 1.23 2014/05/19 08:48:08 jlec Exp $

*shelx-20060317-r2 (19 May 2014)

  19 May 2014; Justin Lecher <jlec@gentoo.org> +shelx-20060317-r2.ebuild,
  metadata.xml:
  Bump to EAPI=5, add missing die, add prefix support

  19 Oct 2012; Justin Lecher <jlec@gentoo.org> shelx-20060317-r1.ebuild,
  metadata.xml:
  Remove virtual/fortran and always call fortran-2_pkg_setup as intend by the
  updated fortran-2.eclass

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> shelx-20060317-r1.ebuild:
  Add dependency on virtual/fortran

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> shelx-20060317-r1.ebuild:
  Added fortran-2.eclass support

  16 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  shelx-20060317-r1.ebuild:
  ppc stable wrt #325943

  16 Dec 2010; Justin Lecher <jlec@gentoo.org> shelx-20060317-r1.ebuild:
  Removal of fortran.eclass, #348851

  20 Aug 2010; Donnie Berkholz <dberkholz@gentoo.org>;
  shelx-20060317-r1.ebuild:
  OpenMP: Handle full specifier for gfortran correctly so that the default,
  unset compiler works.

  28 Jun 2010; Justin Lecher <jlec@gentoo.org> -shelx-20060317.ebuild,
  shelx-20060317-r1.ebuild:
  Removed old, stabled for x86 & amd64, tested it in action routinely at
  work, permission granted in #325943

  07 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  shelx-20060317-r1.ebuild:
  Use elog for fetch error.

  29 May 2009; Donnie Berkholz <dberkholz@gentoo.org>;
  shelx-20060317-r1.ebuild:
  Keyword ~amd64.

  07 Nov 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  shelx-20060317.ebuild, shelx-20060317-r1.ebuild:
  Fix quoting.

*shelx-20060317-r1 (07 Nov 2008)

  07 Nov 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +shelx-20060317-r1.ebuild:
  Add OpenMP support.

  06 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml: