@@ -3,28 +3,45 @@ Hash: SHA512
 
 AUX 20060317-autotool.patch 1218 SHA256 6c41666ddb019d8ad42413723247fd8cda76e0b754e8fdce5734a6a4ba5ba9b8 SHA512 1203bd2a1a477f49ed8b15bf396a010064ba4bffbd832f063bca3b02381ce8a1bfba19650cad9ae201a23bf283ad14d250b8786272fa2aaca5494a7ddbf6a92d WHIRLPOOL 5bada38508ea7576cfa9ad771ab29014cec9b4245fff100a2f2b21bbb903061c584373d77f0eb11839225b186abd2be20dfb25a8eea4ebf7527432772935fc53
 AUX 20060317-gfortran.patch 686 SHA256 fc1b248bea13989383e12a24628c3330b781cb26b6135f2614323fad7d70cc17 SHA512 ddbb3e49d90593be18e7ffc1b13aa75d160361f051285074a0753950d29439918158568fa60f814278931e2c58272401dce2f864a16214774a5e4bdbd7e2511b WHIRLPOOL 5bcc494046d6f831e6f7c4891f5da276f9823e5176dac8109da28169ca5bc61d364cde7e5ca856e8789252be55d8af3248b0fbf2fd58276e160c3895d9480294
+DIST anode_amd64.bz2 8758937 SHA256 01568fd23b0abe280de7a286b9885182f10f06829f139e46bac75846276f60c7 SHA512 6d9f0e506531e14956a95ed23c4c5ccfabaf79b92feba237923db2731e9f3861163f6039e556a6976d910075558fae120088c4805f09880ff33955eff86cc2e1 WHIRLPOOL af181735822c8d04187f98d06f3be2d563cb3e81571fb81139e384a38b54ca7cc83d10a10564456fffb6eead5ab52833f9002882632634fd5a2f8f450d99ca8c
+DIST anode_x86.bz2 4310241 SHA256 520f96803bb0ae7d2e7411187968bb38edadad42f06c22af4f89ee2fd4c95886 SHA512 344e25564d4e0d94764c536625c9be3f4a4b8be74153f17f07254f798e9ebbfe416d069a082906187ba0ec7ab958adf8c7c1ec0afab7a6b146fe02a0b5b88505 WHIRLPOOL 3f349040d1ac9af4323cb091e1b2eb37aff6fe5a1202e65adc9119d1ed141406b5a6792852050061e06253411cb409aebc07c3eb50a26bfa5064ed897ba8da9f
+DIST ciftab_amd64.bz2 1749617 SHA256 306463624302d5e9ad9dc48d1608e4688e70e1d072a8018fe54c8f650348a038 SHA512 dcd6598a4ecb86e69132066fbdcf08f61c6902bb315351236ed7f2a9ce6a83d0a1bdada05c98427e6daecbb0feecc05e5699da36d5541ba9a2c5355be465fb7e WHIRLPOOL b0fbb5577e09a0060dc56413ec482752f435dd9f37a73aea666a940693cbfaf7198e54d6575d9e5627fe10c988d53132ea3ef55fe7687f58e3d3c3f7c9d438d5
+DIST ciftab_x86.bz2 507450 SHA256 f452cd8e14c9ab93f1995c3e89c793dcac98fdfb27d7b93e672c601b0f872487 SHA512 557d642d616c5efa595f4486c046ccc04d7b3476bf46d63f4cef266bf7213d12ba9a7634a9c5847d467bf2a343b2018c33b0eb16233b8f0ab2c59732882654b7 WHIRLPOOL 19bc53470c6926aba35eaf50bdfc7bf5a41d328eb5ad46cf9ab70a411ef12c0da514c4891c747d261c4a3e474ef1f1f74870de5ac6fbc473bf7da6b1cd1a1c15
 DIST shelx-20060317-mp.tgz 1208177 SHA256 00c3254269404b704f8ceb5ee45c0ab71b57b4bbb04f1b72a188dd18ccced7d2 SHA512 42358b65b44ef6ca5f570880348c733f5255dcad12f8a83b50f59e32d33e23ff32d462c0c5cffcbbdac7c5b8f40cdac3d4f98f70e5a3f1b3528d79972b252d10 WHIRLPOOL 4917a5235b12444f2c7dd91378a303186ab2319239f3a8d573b4b0159145cd3674eaa8f2ba9d5e89a85a88d0a0e9072058494fb10d34f99e37cf42d8838a9f92
 DIST shelx-20060317.tgz 527162 SHA256 8edb841fa71cae420e65fa87fdb3d829359a199aeead6522c72a08c4f72307d9 SHA512 80d70bd157ae8b1ef81b6a4ba6feb0497a2983a8c888f875e6642f4c35b4263083c9d0f59bb11b42595d09a4035157f7faf0e6decd3f93597225d52f8a779995 WHIRLPOOL a55aae2c768dd8fd263f906440c8c9e90b6164bfbfa194f6b58fea3b35b1d4406b6bdfcc7417fc1179782afb6f3f65519d4b3e4915d27597282512dc371b6c84
+DIST shelxc_amd64.bz2 1512577 SHA256 4a5b3632f22aaa120c431bad993e2cf88b71b1e5f5d7e23303ea68f3c42cb743 SHA512 ce6877e79193961ee70d21d0b7b4e599eb86809ac70dbe55effddaae28572ae9e024b28cb015a9c420ab694b35be96bba38187323870cba11f7e1d3aeec55295 WHIRLPOOL 546061d032647fbb237a3964d71315b97888960f159daf65ef3cea29f6d6e4d10c687493b8f164711f12218fdacc760a8d45e23a5efdb47f72473c73c989e0c7
+DIST shelxc_x86.bz2 613349 SHA256 995901b71f7e47e93c525692a9708e4200713fd0d9d2e14bbac02c2d18f2b352 SHA512 2d656070a2af354b53fe803d4d97ea361b3d8e60877cd9a93f5f283decf41f7d74984061782e2bb5aee255e3b3c9b7933cec8976f7a6bcefde62956db3b43f05 WHIRLPOOL 008055c64091c0b434ed0c8103d5c2e07c7cdfbafe2e2e9160db0d699457167dc5c918c569bee58240e33a95e5299abea9742f69e51b2b5eb16e138ec218002c
+DIST shelxd_amd64.bz2 8773698 SHA256 fa7c103c0156ad060e7b66b6f39de8982d660a715a07584d2c1a1853d171d3c0 SHA512 6cb881a937e461edf9c9e7736bfab164e6dc16c4df4291b8dce69b3abf98ce27fadb8079cc5142d2b77eb94ac42c0bb375f3ac21b45f590d535839cc7f8cd762 WHIRLPOOL c4b3b8b7f9d78e15153b4f3678ef8766cdc97cc3c03686b528a40b98d45233612c0104aaa3ec491cd20e787d834965056b10bfa3fc247fc1a4aaee4c0739162d
+DIST shelxd_x86.bz2 4406371 SHA256 0b0da50c0907f97e93b46bbd01e63737c007b1b93aa3a79d471621d39557e74f SHA512 68d11983f98984bfaca089b839d38cc9607857d2bb6d2cff306d9efa2f34ea8d741220eb01a99d2ecdd832dde1794b4bb228ceae3fc0e87e3210dfa491e6a402 WHIRLPOOL 6cb3343aa878a5703a65b93f6dd1255ebc668afad92117441a785a91dd39d1736a10411655b08da7ff714bed7ed423e30555b8436c9a7df9f49f8ea3351f651e
+DIST shelxe_amd64.bz2 8385741 SHA256 20fa809982a0e285f6526fa021bb05b546309a4e59c92b597cdffd5b0be4b95a SHA512 8407a664c4136c9c6570509ff9228afd4515dd43aa313068424ce7a9f73eb9eb447e48b6ea156e8373b61d73ff48d4b7216a6d1567f39df535edb4dd3b537181 WHIRLPOOL cf699b32134bc81bc9a597ba3e156361ce7042a02871c8826447f0f8d8c6a6a19766341f3c6e7feb491ebc5db88750c31b8852cde39140d2bbd862ef9a3ce07b
+DIST shelxe_x86.bz2 4180042 SHA256 067e07ebe095c80bb68accf696656f7b62a54938534c5ed1858bdbb5eb3b24b1 SHA512 5233c69b08cd7b26a822a0b0ca9c7c09a702cd3eba1f271df4f24f8117f2779b773655381620d5153a6def26253129d0e1d29d086feed67ec3a5bd9a318e6436 WHIRLPOOL 66ee079e0550faeb114226697dc12a7b73b7a42744154861bb81d9b49cdb0384192fca375b983fd1a19f0728a6b8086fad08f2349045772c830ccf24bc4abf91
+DIST shelxl_amd64.bz2 2985657 SHA256 411df99bc65f52d1a472647e9132cc97e9c5739f89c9b24ec15f64b3697feb76 SHA512 dd3c3d956f4b54b5acf861e247b3246409fbfe026066565ac0631b6a4bec5cd89c70e874cb42cec754535d11a27e506108e0f4acd1d6f6b684d8c475cb66b1fa WHIRLPOOL b266db959d484bd9d313ee5cb5825bcb907a72a402681fb5fdc7d226d3797956921349b2549fa89f55a928dd6b635bdc5c3e46198864054fd0b59e440023523a
+DIST shelxl_x86.bz2 1606743 SHA256 340f65be64e69eb89d4d543ed2c6a94f1a43e92f33ebb82d2dd18988f4a5c9ee SHA512 d9039febb715cdd58c3b5dd629d36737953e499f95cefe777b0224844752fd730fdf0f3ca3fb39afdd09b3baf6124d1cd53dfe55260a42682a2511c787569f2f WHIRLPOOL 1f383e5be88c078d9bff0f0d83f715785598e1dc615bb94d5e849fd1f5985886f3d0729e91bbea34dcea05d065c5b169d707d6daeb2629a4ed2834fb415e7151
+DIST shelxs_amd64.bz2 1606403 SHA256 9b180574ee2b828123f622d42e307778d8d4a1f4c32d5741ba065ad2b7751e60 SHA512 3d26e8bc10f0004ee52a564be567db0cdf41f7d05d457e66c12e117bb82550066bf7333830f8dcd56ea987de677f365db25a51f4c22efda9c911fda03d49086e WHIRLPOOL 7e02ede8528e752f1a01d3109064914d42d6c83e4d8c0e901e13e9e1345160d087f35568d1f7ff7f61f54fdbf838a6e8b2d8ab9482df27fd561cc7f4dad610d7
+DIST shelxs_x86.bz2 746352 SHA256 3eea6b363f7e2ff90965a01b65f3aa5d4ac5642a1528a7824c3ea8398c272d2b SHA512 9ecf1e8da8df2280a1982c210dea5418004492047fdd3ab004eade39d247199f3c757d00a56d179eadc7a1ce434c8019c39af865b641ae3c370a8461a950140c WHIRLPOOL 5120481aefcaa3871e61dc2f9230095506386de83741e3e5fc7cdf29f2835509ae369276b55252b981907a76b59f3829e0c4ab1738605e5c6f72ff58401157d2
+DIST shredcif_amd64.bz2 1368877 SHA256 8b0f2ff63ca5f7203aeb6f5b0b8cc1952b2949c864ac8b8971c59b70311f8638 SHA512 a6854c2c8d5d4d710bdf62eb7fd32d10d97269292731db124c07bb734da80f537e725c3ef61c4adef297ed16c7c839febcce88dda4f44d6815be96ebc4a62466 WHIRLPOOL 10518ebbd01b235a4e747ecb1840e82ce9e048830e41db850b87492d2fdb763eac30a920d6985623cee71a1ffc677c62870e1315fa7c001db16cf99595cd9943
+DIST shredcif_x86.bz2 459261 SHA256 372da1c5643ea4cfc8ba8b5f91555871f4521f7bea76953585a2b369f037d2cf SHA512 fdb82b9f8ba51540343260cae10addc67f86f60815d9a77e85c93a39e2f4d83ca016a9d8335e0710ba31f0270100644b3b67b857f1219ea44f37bb4e6ae93b3d WHIRLPOOL 08f892d2b8d89c6c84213e6d5ebc37d8302711bdbef87861bb68726ff73fe072c5bf27ee8f52db66387683baca1bb75da8421f34c89e185e6bfd413df4633c9f
 EBUILD shelx-20060317-r1.ebuild 1732 SHA256 ae99d8e6992bbcdebb2b9ee5612016618ed458ef09a699722c2637b4aa5bf489 SHA512 7846eaac52141bd3266411141c7bef9b10389851877d85b16f2613ea1999a4e7739e358570edfd09d6b2be754f1de57b21cc3d9a22d6b6ea7e72c286ade28f57 WHIRLPOOL 02c470e02972959251d8aaab45218a9b193b7c654dcc6c5291244f8a290ca18c1c9df4b15b417baabc7bc06013b1f5d81d958e2f7edc3a3b7b6741b36c68b409
 EBUILD shelx-20060317-r2.ebuild 1736 SHA256 c812c143bc6cdb9e53298048a3dace22693ee0eee5f0e7b335c0a444661c16d8 SHA512 05a92ca5f60b543a7dc209d11cbdf9d837ab5d8a60e93f271da933ca346978923bf855d47d9667a93099ca1310c6e956ca1ff32186c1de4be9a010682c080122 WHIRLPOOL 5764bb8e218addb5b0cdff8eb4f97ad39d7f56bbc12a999bc1b7a268c83403909058a2774228ade937645112c63641aed37989b6907e32f79315106722153beb
-MISC ChangeLog 3463 SHA256 8886c1002689365402a9b885626fb29d0c7ed80d94dc755f9e1d4fb18fdfd4da SHA512 30249f784fe7e2702270f89e7948c4482da35627262ea549dc64b8a266159f94f5c55f99b068b0d96edfbff20fedc09ae6a36b120cee77d9bcc202033d18a47f WHIRLPOOL d26b600c7f171dd7e96a8e595437ccdba7d09affeafde8112d54406b572dac17bf090ee2ce20b0efe7ba2b6dee78fae34623228a0ddcc98a3e6a683d37a71d37
+EBUILD shelx-20140326.ebuild 1196 SHA256 8e625adeefbf85a705af4b58cdcd71c72c8aef42e789e9dca092adbe1306b868 SHA512 3a9d8e6ef4c1f2af2d23f3190fbe975e37ec6a58b6f2b0f08398274152cdf18fa0dc707b31387896c5c894e8e2ceacd39919934f948dcab6218157fb42c37064 WHIRLPOOL 0303564346d4decc6d2abe15759945db73169816b9b837b7b5c985c0f81d0e90946bfcf273388e07b3bc78f00ef170caba1fbd3d3948e51b844761a697532614
+MISC ChangeLog 3581 SHA256 b739f632af3325797dd230630b15aeb5410cb3e8553c3e351f27f059cbccc664 SHA512 04f575459398658025d04ed87963a387e23089ca2a36a15e7d17f78146c0bc611a505c47fb4f441138551e813c0408b0ea12b04b3457bf9b935932591beec07b WHIRLPOOL f59582a139130a6b088a75d1af3a15516323ff085a6d2f7e8ee3535a188c44df3961558c02fc946a650ed775440c73ae8009363510baa5f979f177ff122f6821
 MISC metadata.xml 290 SHA256 4440435ae9beccd6bea35374b538c8ead7e802840e2491f6605f847d64146595 SHA512 5c74a7651fe51cd0549c07d66f7fd1987bef440c20ae70c28106389f32754c4bc8ad118766da65a2b556f23a6a87295f3cafd891eaa00906227a977aa62f523e WHIRLPOOL f488631c4f2a68bb562e5837170724ef3edcc50aaa0de5c36126beb7b3bfc196dc423e457b7f8094424a6842ae1a15998e77a771f133279988406ad4328c9a49
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCgBmBQJTecVJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJTecwqXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirRTAP/2agK4/B5/9T8ncpIzSR3Ffr
-hbmtpt9trxFh/M6b0ERml1xFiJqEg2+7DdtW8WGK9CnuAM3bAex/HO1bgtiDronG
-LP2VQrOVtaXwdVPqdXS04EBmGL4mOaxBztNVvxEbfa8P86/+FaM3oNo1eweZwl75
-lYwhQvlEbRD+doP2aTEgL75NA+2hFZvaPAkgWhl1lGWr1t4NrWaximmDjlWsEgZH
-ms2iRrE3ZiOPG+r8st1oLpYD9Ze9b9jlTtcSd8ST80eLH+MnmTD9oP8uiDi0CV3u
-ATemAwgeZcrlDlkcsfT9uahEx+Pwj5pwGDO4miOc/CdIoUs8PlVsVsbiUiycIQNb
-NBzTwM5QoVEdGriv/jJkifLkFCpRy3J0iq8MjQbqzRkEnMLZziafXhWO/qLCGkoo
-cFUckPdUlSkd4I3AXMTP6EIDaW5Kn1GKA9KUjGSHQ5elui57L5LE9hGIa6gqhut6
-aJwCOlJtS5giKf0NP/ynhZ5c5WpbB8CTRd7ovgDFTFocy68jEmj6ZsWEc3h2Lak8
-RZQNF0Y0ndjAROLJOkSDmbsZNe1uxDDD4vZPwTlYuoZAifEuSmiPc/l+zLySwS9b
-Ndtyw7niAqK40VGMfjklaqlGcwFZKdS2fliT1IelLWKnPgL7BCduGLhR4tNTJNMe
-PK+WjLrfA+SS4RvDNmv6
-=UUnV
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirfrsP/i1bSKPRMCof9RSMFeN06LOO
+3xSUBBOkzt6PkYEX2AtYg107cDYqb4T0ZLt8G2F6kv6WIs29D2IrxLUYKGTBFHSL
+URkzSGIDVFDRHP9iO1lMCir+hUcGwCd1g14wL24y62lqTZzPv2wxoe94whNRB8ly
+mMqnJD0IDvJjAGppdl8mRuB668Ruj4RbNnjZwbY+by1E+72pHxQDYUdktMdpCHfY
+fXJZgWwVwIailNesA5v4HE/k31Nz+LgO8YtVNrl+qGzBLCPIwuJy19q5YooO63I8
+INYVb9Z6tqHtirRr1bPcKweBYrdAPZ0ZwdppWnFSnfc/UVe88gtmOfpLTiSGyOmc
+XkPum86gIdaAGHUnsoMKrKT17CXp8+FDntKH5iIa4cZafPGqQ/Y7tBqFdWteNCy6
+Oo35CyTU+overw31IygANeVuiaNT/3gtHPyzeZwxwMxoZXJuRNyxf+fGvyaMiH46
+lRgYVr1lmrpxYnP9sPl6h3Kw5Yjp5bcUgtw8VWdmCJxV0YckiluaEcZZ+5abQULc
+2XZM1Y7+fb0nIVjVJbOFBegGriY/pSHEVKs843jRxJpDXT32Yxl4dSE1GOuworU6
+kRW6L06hh1tiLCtx/IwLFffiHRaZLBmFgFAfedy02S7+7NJ+Pl8xxe1khPRxVaTd
+PQeXAdSYj4dN7DTw6kmA
+=nk5J
 -----END PGP SIGNATURE-----
